# motionforge-3d

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
apps/api/: Dockerfile
apps/web/: Dockerfile  package-lock.json  package.json
apps/worker/: Dockerfile  celery_app.py  run.py  tasks.py
configs/movements/: bicep_curl.json  shoulder_raise.json  sit_to_stand.json  squat.json
docs/: API_GUIDE.md  CALIBRATION_GUIDE.md  DATASET.md  DATA_MODEL.md  DEMO_WALKTHROUGH.md  IMPLEMENTATION_SUMMARY.md  MOVEMENT_TEMPLATES.md  PRIVACY_RETENTION.md  TROUBLESHOOTING.md  VERIFICATION_REPORT.md  public_dataset_results.json  verification_results.json
docs/algorithms/: ALGORITHMS.md
docs/architecture/: SYSTEM_DIAGRAMS.md
docs/deployment/: DEPLOYMENT.md
docs/runbooks/: OPERATIONS.md
docs/screenshots/: README.md
docs/security/: THREAT_MODEL.md
infra/monitoring/: prometheus.yml
scripts/bootstrap/: seed.py
scripts/datasets/: __init__.py  download_wikimedia_squat.py  run_wikimedia_squat_demo.py
scripts/demo/: generate_marker_video.py
scripts/models/: download_movenet.py
scripts/verification/: verify_e2e.py
tests/integration/: test_api.py
tests/unit/: test_filters.py  test_geometry.py  test_repetition.py  (+3 more)
(+42 files in other folders)
