[project]
name = "motionforge-3d"
version = "0.1.0"
description = "CPU-first human movement intelligence platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115", "uvicorn[standard]>=0.30", "sqlalchemy>=2.0", "alembic>=1.13",
  "pydantic[email]>=2.8", "pydantic-settings>=2.4", "python-multipart>=0.0.9",
  "PyJWT>=2.9", "argon2-cffi>=23.1", "opencv-python-headless>=4.10", "numpy>=2.0",
  "scipy>=1.13", "reportlab>=4.2", "PyYAML>=6.0", "httpx>=0.27",
  "onnxruntime>=1.18"
]
[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2"]
queue = ["celery>=5.4", "redis>=5.0"]
storage = ["minio>=7.2"]
dev = ["pytest>=8.3", "pytest-cov>=5.0", "ruff>=0.6", "mypy>=1.11,<1.20"]
[tool.pytest.ini_options]
pythonpath = [".", "apps/api"]
testpaths = ["tests"]
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = ["E402"]
"tests/**/*.py" = ["E402"]
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "packages*"]
